tests/invalid/StaticVar_Invalid_11.whiley
int GLOBAL = 0

function f() -> (int r):
    GLOBAL = 1
    return 0
